k8s/deploys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deploy-app
  template:
    metadata:
      labels:
        app: frontend-deploy-app
    spec:
      containers:
        - name: frontend-container
          image: ghcr.io/yikaiwu1125/hw_frontend:latest
          ports:
            - containerPort: 5173
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deploy-app
  template:
    metadata:
      labels:
        app: backend-deploy-app
    spec:
      containers:
        - name: backend-container
          image: ghcr.io/yikaiwu1125/hw_backend:latest
          ports:
            - containerPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db-deploy-app
  template:
    metadata:
      labels:
        app: mongo-db-deploy-app
    spec:
      containers:
        - name: mongo-container
          image: mongo:latest
          ports:
            - containerPort: 27017
